--- a/home.css
+++ b/home.css
@@ -1,6 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@200&family=Ubuntu:wght@300&family=Varela+Round&display=swap');
+
 body{
     padding: 0;
     margin: 0;
+    /* background-image: linear-gradient (to right, rgba(255,0,0,0), rgb(18, 12, 12));
+    background-color: rgba(47, 45, 45, 0.662); */
+    /*background-color:#f3e0e2; */
+    /* background-color:hsla(0,100%,50%,1);
+    background-image:
+    radial-gradient(at 40% 20%, hsla(28,100%,74%,1) 0px, transparent 50%),
+    radial-gradient(at 80% 0%, hsla(189,100%,56%,1) 0px, transparent 50%),
+    radial-gradient(at 0% 50%, hsla(355,100%,93%,1) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, hsla(340,100%,76%,1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, hsla(242,100%,70%,1) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, hsla(343,100%,76%,1) 0px, transparent 50%); */
+    /* background-color:#ffa599;
+background-image:
+radial-gradient(at 78% 53%, hsla(320,62%,62%,1) 0px, transparent 50%),
+radial-gradient(at 4% 4%, hsla(320,82%,66%,1) 0px, transparent 50%),
+radial-gradient(at 62% 12%, hsla(94,80%,74%,1) 0px, transparent 50%),
+radial-gradient(at 9% 55%, hsla(239,82%,71%,1) 0px, transparent 50%),
+radial-gradient(at 92% 40%, hsla(155,75%,74%,1) 0px, transparent 50%),
+radial-gradient(at 78% 84%, hsla(17,86%,78%,1) 0px, transparent 50%),
+radial-gradient(at 1% 39%, hsla(108,90%,76%,1) 0px, transparent 50%); */
+background-color: #abababb5;;
+
+    
+
+   
 }
 .nav-main
 {
@@ -310,7 +338,7 @@ input[type="password" i] {
     min-height: auto;
 } */
 
-.main-content
+/* .main-content
 {
     background-color: white;
     display: flex;
@@ -319,4 +347,85 @@ input[type="password" i] {
     border: 3px solid black;
     width: 300px;
     margin: 100px auto;
+} */
+.main-content {
+    background-color: color(srgb-linear 0 0 0 / 0);
+    padding: 100px;
+    margin: 50px 340px;
+    border-radius: 5px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
+    /* font-family: 'Playpen Sans', cursive; */
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 18px;
+    /* color: white; */
+}
+.box
+{
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 18px;
+}
+
+.main-content form {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.main-content label {
+    font-weight: bold;
+    margin-top: 2px;
+}
+
+.main-content #project, #assign,#assigntask {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.radio
+{
+    font-size: 15px;
+}
+/* .main-content .radio {
+    margin-top: 10px;
+} */
+
+.main-content .radio label {
+    margin-right: 10px;
+}
+
+.main-content button {
+    background-color: #007BFF;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.main-content button:hover {
+    background-color: #0056b3;
+}
+.main-content input{
+    margin-top: 5px;
+}
+.btn22
+{
+    display: flex;
+    justify-content: center;
+    margin-top: 14px;
+}
+
+h5{
+display: flex;
+/* font-size: 0.83em; */
+margin-block-start: -3.33em;
+/* margin-block-end: 2.67em; */
+/* margin-inline-start: 0px; */
+justify-content: center;
+/* margin-inline-end: 0px; */
+font-weight: bold;
+font-family: 'Playpen Sans', cursive;
+font-size: 25px;
+text-decoration:underline;
 }
