--- a/public/home.css
+++ b/public/home.css
@@ -429,3 +429,15 @@ font-family: 'Playpen Sans', cursive;
 font-size: 25px;
 text-decoration:underline;
 }
+.details
+{
+    background-color: color(srgb-linear 0 0 0 / 0);
+    padding: 100px;
+    margin: 50px 340px;
+    border-radius: 5px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.15);
+    /* font-family: 'Playpen Sans', cursive; */
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 18px;
+    /* color: white; */
+}
