--- a/public/index.css
+++ b/public/index.css
@@ -84,21 +84,15 @@ h5
 .modal-content
 {
     display:block;
-    background-color:#ffa599;
-    background-image:
-    radial-gradient(at 78% 53%, hsla(320,62%,62%,1) 0px, transparent 50%),
-    radial-gradient(at 4% 4%, hsla(320,82%,66%,1) 0px, transparent 50%),
-    radial-gradient(at 62% 12%, hsla(94,80%,74%,1) 0px, transparent 50%),
-    radial-gradient(at 9% 55%, hsla(239,82%,71%,1) 0px, transparent 50%),
-    radial-gradient(at 92% 40%, hsla(155,75%,74%,1) 0px, transparent 50%),
-    radial-gradient(at 78% 84%, hsla(17,86%,78%,1) 0px, transparent 50%),
-    radial-gradient(at 1% 39%, hsla(108,90%,76%,1) 0px, transparent 50%);
+    background-color: white;
     /* background-color:white; */
     margin: 40px auto;
-    border: 1px solid #888;
+    border: 0 0 15px solid;
     width: 450px;
     justify-content:space-evenly;
     align-items:center;
+    border-radius:15px 15px;
+    color: #000;
     
 }
 .close
@@ -142,15 +136,16 @@ h5
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 19px;
     
 }
 .container{
     display: flex;
     flex-direction: column;
-    padding: 0.01em 16px;
+    padding: 2.09em 16.3px;
     margin-top: 30px;
     margin-bottom: 20px;
-    margin: 8px 0px;
+    margin: 12px 4px;
 
 }
 .logbut
@@ -177,9 +172,10 @@ h5
 .container1{
     display: flex;
     justify-content: space-between;
-    padding: 0.01em 16px;
+    padding: 01.01em 16px;
     margin-top: 16px;
     margin-bottom: 5px;
+    border-radius: 15px;
 }
 
 .psw a{
